fix myBag textAlign in different Text Length

--- a/frontend/src/scss/components/_myBag.scss
+++ b/frontend/src/scss/components/_myBag.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    width: 21%;
 
     .product-state-info {
       color: #3973e6;
